[package]
name = "cryptoseille"
version = "0.1.0"
authors = ["Naomi Nitel <naominitel@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
json = "*"
chrono = "*"
ndarray = "0.13.1"
rand = "0.7.3"
hmmm = { git = "https://github.com/naominitel/hmmm" }
